or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.
.
You should have received a copy of the GNU Lesser General Public License
along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
MA 02111-1307, USA.

2002-11-25  Torbjorn Granlund  <tege@swox.com>

	* mpfr/tests/tdiv.c: Decrease number of performed tests.

2002-11-23  Torbjorn Granlund  <tege@swox.com>

	* mpn/ia64/mul_1.asm: Rewrite.

2002-11-23  Kevin Ryde  <kevin@swox.se>

	* mpn/ia64/README: Add some references.

	* gmp.texi (Build Options): Add itanium and itanium2, mention DocBook
	and XML from makeinfo, add texinfo top level cross reference.
	(Integer Division): Try to clarify 2exp functions a bit.
	(C++ Interface Floats): Giving bad string to constructor is undefined.
	(C++ Interface Integers, C++ Interface Rationals): Ditto, and show
	default base in prototype, not the description.

	* config.sub, config.guess, configure.in (itanium, itanium2): New cpu
	types.

	* tests/misc/t-printf.c, tests/misc/t-scanf.c (check_misc): Suppress
	%zd test on glibc prior to 2.1, it's not supported.

2002-11-22  Torbjorn Granlund  <tege@swox.com>

	* mpn/ia64/copyi.asm: Optimize for Itanium 2.
	* mpn/ia64/copyd.asm: Likewise.

2002-11-20  Torbjorn Granlund  <tege@swox.com>

	* mpn/ia64/sqr_diagonal.asm: New file.

	* mpn/ia64/submul_1.asm: Handle vl == 0 specially.

2002-11-20  Kevin Ryde  <kevin@swox.se>

	* tests/cxx/t-locale.cc: Test with locales imbued into stream, use
	<sstream>, eliminated some C-isms.  istream tests disabled, not yet
	locale-ized.
	* tests/cxx/Makefile.am (t_locale_SOURCES): Remove localeconv.c.
	* tests/cxx/localeconv.c: Remove file.

	* configure.in (AC_CHECK_TYPES) [C++]: Add std::locale.
	* printf/doprntf.c: Add decimal point parameter, remove localeconv use.
	* gmp-impl.h (__gmp_doprnt_mpf): Update prototype, bump symbol to